[gd_scene load_steps=59 format=2]

[ext_resource path="res://tscndosyalari/menu/AnaMenuyeDonTusu.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscndosyalari/menu/ParaTablo.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/menu/Marketv2.gd" type="Script" id=3]
[ext_resource path="res://resimler/arkaplan/anamenuarka7.png" type="Texture" id=4]
[ext_resource path="res://font/hemi-head-426.rg-bolditalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resimler/menu/market/1elmas.png" type="Texture" id=6]
[ext_resource path="res://resimler/menu/market/2elmas.png" type="Texture" id=7]
[ext_resource path="res://resimler/menu/market/5elmas.png" type="Texture" id=8]
[ext_resource path="res://resimler/menu/market/gumus.png" type="Texture" id=9]
[ext_resource path="res://resimler/menu/market/bronz.png" type="Texture" id=10]
[ext_resource path="res://resimler/menu/market/altin.png" type="Texture" id=11]
[ext_resource path="res://resimler/menu/market/10elmas.png" type="Texture" id=12]
[ext_resource path="res://script/menu/Scroll.gd" type="Script" id=13]
[ext_resource path="res://script/menu/KoyuMod.gd" type="Script" id=14]
[ext_resource path="res://resimler/menu/market/motor2.png" type="Texture" id=15]
[ext_resource path="res://resimler/menu/market/yag.png" type="Texture" id=16]
[ext_resource path="res://resimler/menu/market/orta.png" type="Texture" id=17]
[ext_resource path="res://resimler/menu/market/yumusak.png" type="Texture" id=18]
[ext_resource path="res://resimler/menu/market/ekonomi.png" type="Texture" id=19]
[ext_resource path="res://resimler/menu/market/motor.png" type="Texture" id=20]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=21]
[ext_resource path="res://resimler/menu/market/yumusak2.png" type="Texture" id=22]
[ext_resource path="res://resimler/menu/market/orta2.png" type="Texture" id=23]
[ext_resource path="res://resimler/menu/market/sert2.png" type="Texture" id=24]
[ext_resource path="res://resimler/menu/market/ekonomi2.png" type="Texture" id=25]
[ext_resource path="res://resimler/menu/market/sert.png" type="Texture" id=26]
[ext_resource path="res://resimler/menu/market/1elmas2.png" type="Texture" id=27]
[ext_resource path="res://resimler/menu/market/altin2.png" type="Texture" id=28]
[ext_resource path="res://resimler/menu/market/bronz2.png" type="Texture" id=29]
[ext_resource path="res://resimler/menu/market/gumus2.png" type="Texture" id=30]
[ext_resource path="res://resimler/menu/market/2elmas2.png" type="Texture" id=31]
[ext_resource path="res://resimler/menu/market/5elmas2.png" type="Texture" id=32]
[ext_resource path="res://resimler/menu/market/10elmas2.png" type="Texture" id=33]

[sub_resource type="DynamicFont" id=27]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="Theme" id=23]
default_font = ExtResource( 21 )
PopupDialog/styles/panel = null
PopupPanel/styles/panel = null
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource( 21 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
WindowDialog/colors/title_color = Color( 1, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 83
WindowDialog/constants/close_v_ofs = -43
WindowDialog/constants/scaleborder_size = 6
WindowDialog/constants/title_height = -96
WindowDialog/fonts/title_font = SubResource( 27 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 28 )

[sub_resource type="DynamicFont" id=35]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.564706, 0.564706, 0.564706, 1 )
skew = Vector2( 0.05, 0.05 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3
expand_margin_left = 10.0
expand_margin_right = 10.0
shadow_color = Color( 0, 0, 0, 0.470588 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.168627, 0.168627, 0.168627, 1 )
skew = Vector2( 0.05, 0.05 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 3
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.14902, 0.14902, 0.14902, 0.694118 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 1, 0, 0, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
HScrollBar/styles/scroll = SubResource( 29 )
ScrollContainer/styles/bg = SubResource( 30 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource( 31 )
VScrollBar/styles/grabber_highlight = SubResource( 31 )
VScrollBar/styles/grabber_pressed = SubResource( 31 )
VScrollBar/styles/scroll = SubResource( 31 )
VScrollBar/styles/scroll_focus = SubResource( 31 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.184314, 0.0117647, 0.0117647, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.133333, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_right = 40.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.32549, 0.0352941, 0.0352941, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.392157, 0.0862745, 0.0862745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_right = 40.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="DynamicFont" id=24]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 64.0
expand_margin_bottom = 68.0

[sub_resource type="Theme" id=34]
default_font = ExtResource( 21 )
Button/styles/hover = SubResource( 32 )
Button/styles/normal = SubResource( 33 )
Button/styles/pressed = SubResource( 32 )
PopupDialog/styles/panel = null
PopupPanel/styles/panel = null
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource( 21 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
WindowDialog/colors/title_color = Color( 0.866667, 0.807843, 0.807843, 1 )
WindowDialog/constants/close_h_ofs = 50
WindowDialog/constants/close_v_ofs = 30
WindowDialog/constants/scaleborder_size = 3
WindowDialog/constants/title_height = -96
WindowDialog/fonts/title_font = SubResource( 24 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 25 )

[sub_resource type="DynamicFont" id=13]
size = 40
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=14]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0666667, 0.380392, 0.568627, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0901961, 0.839216, 0.803922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.894118, 0.054902, 0.054902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.403922, 0.0235294, 0.0235294, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Market" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 14 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -696.0
margin_top = -296.0
margin_right = 728.0
margin_bottom = 216.0
color = Color( 0, 0, 0, 0.490196 )

[node name="anamenuyedon" parent="." instance=ExtResource( 1 )]

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -272.0
margin_right = 597.0
margin_bottom = 280.0
rect_min_size = Vector2( 1080, 500 )
theme = SubResource( 23 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_fonts/font = SubResource( 35 )
custom_styles/tab_fg = SubResource( 5 )
custom_styles/tab_disabled = SubResource( 8 )
custom_styles/tab_bg = SubResource( 7 )
custom_styles/panel = SubResource( 26 )
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="Tekerlek Al" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0
rect_clip_content = true

[node name="tekerlek" type="ScrollContainer" parent="TabContainer/Tekerlek Al"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -516.0
margin_top = 19.0
margin_right = 524.0
margin_bottom = 219.0
theme = SubResource( 11 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 13 )

[node name="ScrollContainer" type="HBoxContainer" parent="TabContainer/Tekerlek Al/tekerlek"]
margin_right = 1200.0
margin_bottom = 200.0
custom_constants/separation = 0
alignment = 1

[node name="c5" type="TextureButton" parent="TabContainer/Tekerlek Al/tekerlek/ScrollContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
rect_pivot_offset = Vector2( -1519, 137 )
focus_mode = 1
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
texture_focused = ExtResource( 22 )
expand = true

[node name="c3" type="TextureButton" parent="TabContainer/Tekerlek Al/tekerlek/ScrollContainer"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
texture_focused = ExtResource( 23 )
expand = true

[node name="c1" type="TextureButton" parent="TabContainer/Tekerlek Al/tekerlek/ScrollContainer"]
margin_left = 600.0
margin_right = 900.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 26 )
texture_focused = ExtResource( 24 )
expand = true

[node name="eko" type="TextureButton" parent="TabContainer/Tekerlek Al/tekerlek/ScrollContainer"]
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
texture_focused = ExtResource( 25 )
expand = true

[node name="poptekerlek" type="AcceptDialog" parent="TabContainer/Tekerlek Al"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
theme = SubResource( 34 )
window_title = ""
dialog_text = "Yeterince paran yok."
dialog_autowrap = true

[node name="Space" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Elmas Al" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0

[node name="elmas" type="ScrollContainer" parent="TabContainer/Elmas Al"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -524.0
margin_top = 11.0
margin_right = 524.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 11 )
follow_focus = true
script = ExtResource( 13 )

[node name="ScrollContainer" type="HBoxContainer" parent="TabContainer/Elmas Al/elmas"]
margin_right = 1200.0
margin_bottom = 200.0
custom_constants/separation = 0
alignment = 1

[node name="10elmas" type="TextureButton" parent="TabContainer/Elmas Al/elmas/ScrollContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 33 )
expand = true

[node name="5elmas" type="TextureButton" parent="TabContainer/Elmas Al/elmas/ScrollContainer"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 32 )
expand = true

[node name="2elmas" type="TextureButton" parent="TabContainer/Elmas Al/elmas/ScrollContainer"]
margin_left = 600.0
margin_right = 900.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 1
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 31 )
expand = true

[node name="1elmas" type="TextureButton" parent="TabContainer/Elmas Al/elmas/ScrollContainer"]
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 1
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 27 )
expand = true

[node name="Space2" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Token Takas Et" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kupasat" type="ScrollContainer" parent="TabContainer/Token Takas Et"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -524.0
margin_top = 11.0
margin_right = 528.0
margin_bottom = 227.0
rect_min_size = Vector2( 1050, 211 )
theme = SubResource( 11 )
follow_focus = true
script = ExtResource( 13 )

[node name="ScrollContainer" type="HBoxContainer" parent="TabContainer/Token Takas Et/kupasat"]
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 1200, 200 )
custom_constants/separation = 0
alignment = 1

[node name="elmas" type="TextureButton" parent="TabContainer/Token Takas Et/kupasat/ScrollContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 27 )
expand = true

[node name="altin" type="TextureButton" parent="TabContainer/Token Takas Et/kupasat/ScrollContainer"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 28 )
expand = true

[node name="gumus" type="TextureButton" parent="TabContainer/Token Takas Et/kupasat/ScrollContainer"]
margin_left = 600.0
margin_right = 900.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 30 )
expand = true

[node name="bronz" type="TextureButton" parent="TabContainer/Token Takas Et/kupasat/ScrollContainer"]
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 29 )
expand = true

[node name="Space3" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Diğer" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 79.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Diğer" type="ScrollContainer" parent="TabContainer/Diğer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -524.0
margin_top = 11.0
margin_right = 524.0
margin_bottom = 222.0
rect_clip_content = false
theme = SubResource( 11 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 13 )

[node name="ScrollContainer" type="HBoxContainer" parent="TabContainer/Diğer/Diğer"]
margin_right = 600.0
margin_bottom = 200.0
custom_constants/separation = 0
alignment = 1

[node name="yag" type="TextureButton" parent="TabContainer/Diğer/Diğer/ScrollContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )
expand = true

[node name="motor" type="TextureButton" parent="TabContainer/Diğer/Diğer/ScrollContainer"]
margin_left = 300.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
texture_focused = ExtResource( 15 )
expand = true

[node name="TextureRect3" type="TextureButton" parent="TabContainer/Diğer/Diğer/ScrollContainer"]
visible = false
margin_left = 600.0
margin_right = 900.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
expand = true

[node name="TextureRect4" type="TextureButton" parent="TabContainer/Diğer/Diğer/ScrollContainer"]
visible = false
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
expand = true

[node name="popdiger" type="AcceptDialog" parent="TabContainer/Diğer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
theme = SubResource( 34 )
window_title = ""
dialog_text = "Yağın yeterince eskimemiş değiştirmene gerek yok."
dialog_autowrap = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -488.0
margin_top = -328.0
margin_right = 224.0
margin_bottom = -96.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 21 )
text = "Süper Yumuşak (C5)"
align = 1
valign = 1

[node name="fiyat" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -392.0
margin_top = -328.0
margin_right = -70.0
margin_bottom = -226.0
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 21 )
text = "Fiyat:5000"
align = 1
valign = 1

[node name="satinal" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -392.0
margin_top = -208.0
margin_right = -70.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 16 )
text = "Satın Al"

[node name="sat" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 704.0
margin_top = -208.0
margin_right = 854.0
margin_bottom = -108.0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 19 )
text = "Sat"

[node name="ParaTablo" parent="." instance=ExtResource( 2 )]

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="TabContainer/Tekerlek Al/tekerlek/ScrollContainer/c5" to="." method="_on_c5_pressed"]
[connection signal="pressed" from="TabContainer/Tekerlek Al/tekerlek/ScrollContainer/c3" to="." method="_on_c3_pressed"]
[connection signal="pressed" from="TabContainer/Tekerlek Al/tekerlek/ScrollContainer/c1" to="." method="_on_c1_pressed"]
[connection signal="pressed" from="TabContainer/Tekerlek Al/tekerlek/ScrollContainer/eko" to="." method="_on_eko_pressed"]
[connection signal="pressed" from="TabContainer/Elmas Al/elmas/ScrollContainer/10elmas" to="." method="_on_10elmas_pressed"]
[connection signal="pressed" from="TabContainer/Elmas Al/elmas/ScrollContainer/5elmas" to="." method="_on_5elmas_pressed"]
[connection signal="pressed" from="TabContainer/Elmas Al/elmas/ScrollContainer/2elmas" to="." method="_on_2elmas_pressed"]
[connection signal="pressed" from="TabContainer/Elmas Al/elmas/ScrollContainer/1elmas" to="." method="_on_1elmas_pressed"]
[connection signal="pressed" from="TabContainer/Token Takas Et/kupasat/ScrollContainer/elmas" to="." method="_on_elmas_pressed"]
[connection signal="pressed" from="TabContainer/Token Takas Et/kupasat/ScrollContainer/altin" to="." method="_on_altin_pressed"]
[connection signal="pressed" from="TabContainer/Token Takas Et/kupasat/ScrollContainer/gumus" to="." method="_on_gumus_pressed"]
[connection signal="pressed" from="TabContainer/Token Takas Et/kupasat/ScrollContainer/bronz" to="." method="_on_bronz_pressed"]
[connection signal="pressed" from="TabContainer/Diğer/Diğer/ScrollContainer/yag" to="." method="_on_yag_pressed"]
[connection signal="pressed" from="TabContainer/Diğer/Diğer/ScrollContainer/motor" to="." method="_on_motor_pressed"]
[connection signal="pressed" from="satinal" to="." method="_on_satinal_pressed"]
[connection signal="pressed" from="sat" to="." method="_on_sat_pressed"]
